target/release/build/arrayvec-483b2132ba6b297b/stderr
error[E0554]: #![feature] may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(untagged_unions)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
error[E0658]: unions with non-`Copy` fields are unstable
 --> <anon>:6:5
  |
6 | /     pub union MaybeUninit<T> {
7 | |         empty: (),
8 | |         value: ManuallyDrop<T>,
9 | |     }
  | |_____^
  |
  = note: for more information, see https://github.com/rust-lang/rust/issues/32836

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
